test/files/neg/byname-implicits-26.check
byname-implicits-26.scala:34: error: diverging implicit expansion for type Test.Foo[Test.A]
starting with method fooGen in object Foo
  implicitly[Foo[A]]
            ^
1 error
